Day-1/scheduling/front-user/front-user-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-user
  namespace: application
  labels:
    app: microservices-demo
    component: front-user
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: demo.k8s-ops-X.wescaletraining.fr
    http:
      paths:
      - backend:
          service:
            name: front-user
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: article-service
            port:
              number: 8080
        path: /article/
        pathType: Prefix
      - backend:
          service:
            name: cart-service
            port:
              number: 8080
        path: /cart/
        pathType: Prefix
  tls:
  - hosts:
    - demo.k8s-ops-X.wescaletraining.fr
    secretName: demo-tls
